--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ edition = "2021"
 #
 # DON'T EDIT THIS!
 [dependencies]
-anyhow = "1.0.68"                                # error handling
-bytes = "1.3.0"                                  # helps manage buffers
-thiserror = "1.0.38"                             # error handling
+anyhow = "1.0.68"    # error handling
+bytes = "1.3.0"      # helps manage buffers
+phf = { version = "0.11.2", features = ["macros"] }
+thiserror = "1.0.38" # error handling
